--- a/server/package.json
+++ b/server/package.json
@@ -19,18 +19,18 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.1",
+    "babel-jest": "^27.0.2",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
   }
 }
